--- a/fundamentals/what-are-cryptocurrencies.html
+++ b/fundamentals/what-are-cryptocurrencies.html
@@ -1,31 +1,34 @@
 ---
 layout: default
-title: What are cryptocurrencies?
+title: What Are Cryptocurrencies?
 ---
 
 <section class="container py-5" style="max-width: 800px;">
   <h1 class="mb-4">What Are Cryptocurrencies?</h1>
 
-  <p>Cryptocurrencies are digital or virtual currencies that use cryptography for security. Unlike traditional currencies issued by governments (like the US dollar or Euro), cryptocurrencies are typically decentralized and operate on a blockchain—a distributed ledger enforced by a network of computers, called nodes.</p>
+  <p>Cryptocurrencies are digital or virtual assets that use cryptographic techniques to secure transactions, control the creation of new units, and verify transfers of ownership. Unlike traditional currencies issued and regulated by central banks, cryptocurrencies are typically decentralized and operate on public blockchains—distributed ledgers maintained by a global network of computers, known as nodes.</p>
 
   <h2 class="mt-5">💡 Key Features</h2>
   <ul>
-    <li><strong>Decentralized:</strong> Most cryptocurrencies operate without a central authority, using blockchain technology to maintain a shared ledger.</li>
-    <li><strong>Secure:</strong> Transactions are verified by network participants (miners or validators) and recorded immutably.</li>
-    <li><strong>Transparent:</strong> Public blockchains allow anyone to view transaction histories.</li>
-    <li><strong>Global:</strong> Cryptocurrencies can be sent or received anywhere in the world, 24/7.</li>
+    <li><strong>Decentralized:</strong> Operate independently of central banks or governments, providing users with direct control over their funds.</li>
+    <li><strong>Secure:</strong> Utilize advanced cryptography and consensus algorithms like Proof of Work or Proof of Stake to ensure trust and data integrity.</li>
+    <li><strong>Transparent:</strong> Transactions are recorded on public ledgers accessible to anyone, improving auditability and reducing fraud.</li>
+    <li><strong>Borderless & 24/7:</strong> Can be sent or received globally without reliance on traditional banking hours or intermediaries.</li>
+    <li><strong>Finite Supply:</strong> Many cryptocurrencies, such as Bitcoin, have a capped supply, making them resistant to inflationary monetary policies.</li>
   </ul>
 
   <h2 class="mt-5">🚀 Examples of Popular Cryptocurrencies</h2>
   <ul>
-    <li><strong>Bitcoin (BTC):</strong> The first and most widely used cryptocurrency, often seen as digital gold.</li>
-    <li><strong>Ethereum (ETH):</strong> Enables smart contracts and decentralized applications.</li>
-    <li><strong>Stablecoins:</strong> Such as USDC or USDT, pegged to real-world currencies for price stability.</li>
+    <li><strong>Bitcoin (BTC):</strong> The original cryptocurrency, often considered digital gold, primarily used as a store of value and hedge against inflation.</li>
+    <li><strong>Ethereum (ETH):</strong> A platform for decentralized applications and smart contracts, enabling innovations in DeFi, NFTs, and more.</li>
+    <li><strong>Stablecoins:</strong> Cryptocurrencies like USDC and USDT that are pegged to fiat currencies, offering price stability for everyday use and trading.</li>
+    <li><strong>Solana (SOL), Avalanche (AVAX), and others:</strong> Compete to offer fast, scalable blockchain infrastructures for decentralized applications.</li>
   </ul>
 
   <h2 class="mt-5">🔍 Why They Matter</h2>
-  <p>Cryptocurrencies power the Web3 ecosystem. They are essential for interacting with decentralized finance (DeFi), non-fungible tokens (NFTs), gaming platforms, and decentralized apps (dApps).</p>
-  <p>Beyond investment, cryptocurrencies enable new models for ownership, governance, and access in digital environments.</p>
+  <p>Cryptocurrencies are at the heart of the evolving Web3 ecosystem. They provide the economic layer for decentralized applications (dApps), enable user ownership of digital assets, and allow permissionless participation in financial systems.</p>
+  <p>From enabling peer-to-peer payments and remittances to powering decentralized exchanges and yield farming strategies, cryptocurrencies represent a fundamental shift in how value is transferred, stored, and governed on the internet.</p>
+  <p>Moreover, they are catalyzing innovations in areas like digital identity, global fundraising (via token sales), decentralized autonomous organizations (DAOs), and community-owned networks.</p>
 
   <div class="mt-5">
     <a href="{{ '/' | relative_url }}" class="btn btn-primary">← Back to Home</a>
